--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.restlet.jse</groupId>
 	<artifactId>restlet-jetty9</artifactId>
-	<version>2.2-dev1</version>
+	<version>2.2-dev2</version>
 	<build>
 		<sourceDirectory>src/main</sourceDirectory>
 		<resources>
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>9.0.6.v20130930</version>
+			<version>9.1.0.RC2</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
