--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>9.1.0.RC2</version>
+			<version>9.1.0.v20131115</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
