--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.restlet.jse</groupId>
 	<artifactId>restlet-jetty9</artifactId>
-	<version>2.2-dev3</version>
+	<version>2.2-dev4</version>
 	<build>
 		<sourceDirectory>src/main</sourceDirectory>
 		<resources>
@@ -71,6 +71,12 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
+			<version>9.1.0.v20131115</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-client</artifactId>
 			<version>9.1.0.v20131115</version>
 			<scope>provided</scope>
 		</dependency>
