--- a/pom.xml
+++ b/pom.xml
@@ -59,13 +59,7 @@
 		<dependency>
 			<groupId>org.restlet.jse</groupId>
 			<artifactId>org.restlet</artifactId>
-			<version>[2.2-M5,2.3)</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.restlet.jse</groupId>
-			<artifactId>org.restlet.ext.ssl</artifactId>
-			<version>[2.2-M5,2.3)</version>
+			<version>2.2-RC2</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
