--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,11 @@
 			<version>[9.1.0,9.2)</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty.spdy</groupId>
+			<artifactId>spdy-http-server</artifactId>
+			<version>[9.1.0,9.2)</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
