--- a/pom.xml
+++ b/pom.xml
@@ -54,30 +54,35 @@
 			<name>Public online Restlet repository</name>
 			<url>http://maven.restlet.org</url>
 		</repository>
+		<repository>
+			<id>local</id>
+			<name>Local repository</name>
+			<url>file:///Depot/Repository</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.restlet.jse</groupId>
 			<artifactId>org.restlet</artifactId>
-			<version>2.2</version>
+			<version>2.2.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>[9.1.0,9.2)</version>
+			<version>[9.2.1,9.3.0)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-client</artifactId>
-			<version>[9.1.0,9.2)</version>
+			<version>[9.2.1,9.3.0)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty.spdy</groupId>
 			<artifactId>spdy-http-server</artifactId>
-			<version>[9.1.0,9.2)</version>
+			<version>[9.2.1,9.3.0)</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
