--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.restlet.jse</groupId>
 	<artifactId>org.restlet.ext.jetty9</artifactId>
-	<version>2.2-dev9</version>
+	<version>2.2-dev10</version>
 	<build>
 		<sourceDirectory>src/main</sourceDirectory>
 		<resources>
@@ -64,7 +64,7 @@
 		<dependency>
 			<groupId>org.restlet.jse</groupId>
 			<artifactId>org.restlet</artifactId>
-			<version>2.2.1</version>
+			<version>[2.2,2.3-M0)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
