--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.restlet.jse</groupId>
 	<artifactId>org.restlet.ext.jetty9</artifactId>
-	<version>2.2-dev10</version>
+	<version>2.3-dev1</version>
 	<build>
 		<sourceDirectory>src/main</sourceDirectory>
 		<resources>
@@ -64,25 +64,25 @@
 		<dependency>
 			<groupId>org.restlet.jse</groupId>
 			<artifactId>org.restlet</artifactId>
-			<version>[2.2,2.3-M0)</version>
+			<version>[2.3,2.4)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>[9.2.1,9.3.0)</version>
+			<version>[9.2.6,9.3.0.M0)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-client</artifactId>
-			<version>[9.2.1,9.3.0)</version>
+			<version>[9.2.6,9.3.0.M0)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty.spdy</groupId>
 			<artifactId>spdy-http-server</artifactId>
-			<version>[9.2.1,9.3.0)</version>
+			<version>[9.2.6,9.3.0.M0)</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
