--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,11 @@
 			<version>[9.3.0,9.4.0)</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty.http2</groupId>
+			<artifactId>http2-client</artifactId>
+			<version>[9.3.0,9.4.0)</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
